--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ layout: default
     <h3>Helping You Succeed in Competitive Performance Environments</h3>
 </div>
 
+<div class="separate"></div>
 <section class="about" id="about">
     <div class="section-content">
         <h1>About</h1>
@@ -17,28 +18,34 @@ layout: default
             business professionals helping both individuals and groups
             perform at optimal levels when it counts.
         </p>
-        <h3>I help you become more&elisp;</h3>
+        <h3>I help you become more&#8230;</h3>
         <div class="more-section-group">
             <div class="more-section">
+                <div class="font-heading fa fa-4x fa-heart"></div>
                 <div class="item-heading large-heading">Positive</div>
+        <div class="border"></div>
                 <div class="item-subheading large-subheading">
                     Let me help you maximize the success of your organization by and accountability to help people get where their want to go and be who they want to be.
                 </div>
             </div>
             <div class="more-section">
+                <div class="font-heading fa fa-4x fa-institution"></div>
                 <div class="item-heading large-heading">Focused</div>
-                <div class="item-subheading large-subheading">
+                        <div class="border"></div>
+<div class="item-subheading large-subheading">
                     Let me help you maximize the success of your organization by and accountability to help people get where their want to go and be who they want to be.
                 </div>
             </div>
             <div class="more-section">
+                <div class="font-heading fa fa-4x fa-fighter-jet"></div>
                 <div class="item-heading large-heading">Fighting</div>
-                <div class="item-subheading large-subheading">
+                        <div class="border"></div>
+<div class="item-subheading large-subheading">
                     Let me help you maximize the success of your organization by and accountability to help people get where their want to go and be who they want to be.
                 </div>
             </div>
         </div>
-        <h3>I belive in</h3>
+        <h3>I believe in</h3>
         <p>
             I believe in these values. I am a performance psychology consultant working with business professionals helping both individuals and groups perform
         </p>
@@ -65,6 +72,7 @@ layout: default
     </div>
 </section>
 
+<div class="separate"></div>
 <section class="more-info" id="work">
     <div class="section-content">
         <h1>Work</h1>
@@ -128,36 +136,42 @@ layout: default
                 <div class="small-note">I will honor confidentiality, availability and integrity</div>
             </div>
         </div>
-        <div class="section-do">
+    </div>
+</section>
+
+<section class="purple-section">
+    <div class="section-content">
+        <div class="section-do third-size">
             <div class="left">
                 <div class="item-heading large-heading">Corporate Speaking</div>
                 <div class="item-subheading item-description">I speak on topics related to human performance in the workplace. I customize my material to meet the specific needs of organizations to facilitate their desired outcomes.</div>
                 <a class="button">Book Me</a>
+                <div class="small-note">About one email a month</div>
             </div>
             <div class="right">
-                vimeo thing
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/IcQnxZ4d7qk" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
 </section>
 
-<section class="writing" id="writing">
+<section class="blog" id="writing">
     <div class="section-content">
         <h1>Writing</h1>
         <div class="border"></div>
         <div class="section-writing">
-            <div class="writing-item"">
+            <div class="blog-entry">
                 <div class="item-heading large-heading">3-Steps for Advancing Your 2015 Goals</div>
                 <div class="item-subheading item-description">Now is the best time to reflect on this past year and evaluate what you have learned. Here are three steps to help you clarify the lessons you learned this year while laying the groundwork for advancing your 2015 goals. Carve out 40 minutes in your schedule where you will eliminate distractions. Find a quiet place with a notepad, pen and your 2014 calendar. This may be the best 40-minutes you spend this week! Phone off? Your favorite beverage in place? It’s time to begin.
                 </div>
             </div>
-            <div class="writing-item"">
-                <div class="item-heading large-heading">3-Steps for Advancing Your 2015 Goals</div>
+            <div class="blog-entry">
+                <div class="item-heading large-heading">3 Affirmations For Keeping Your Head In the Game</div>
                 <div class="item-subheading item-description">Now is the best time to reflect on this past year and evaluate what you have learned. Here are three steps to help you clarify the lessons you learned this year while laying the groundwork for advancing your 2015 goals. Carve out 40 minutes in your schedule where you will eliminate distractions. Find a quiet place with a notepad, pen and your 2014 calendar. This may be the best 40-minutes you spend this week! Phone off? Your favorite beverage in place? It’s time to begin.
                 </div>
             </div>
-            <div class="writing-item"">
-                <div class="item-heading large-heading">3-Steps for Advancing Your 2015 Goals</div>
+            <div class="blog-entry">
+                <div class="item-heading large-heading">How To Make The Most From A Mistake</div>
                 <div class="item-subheading item-description">Now is the best time to reflect on this past year and evaluate what you have learned. Here are three steps to help you clarify the lessons you learned this year while laying the groundwork for advancing your 2015 goals. Carve out 40 minutes in your schedule where you will eliminate distractions. Find a quiet place with a notepad, pen and your 2014 calendar. This may be the best 40-minutes you spend this week! Phone off? Your favorite beverage in place? It’s time to begin.
                 </div>
             </div>
@@ -167,6 +181,7 @@ layout: default
     </div>
 </section>
 
+<div class="separate"></div>
 <section class="large-footer" id="large-footer">
     <div class="section-content">
     <h1>Dr. Bill Moore</h1>
