--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ layout: default
                 <div class="small-note">About one email a month</div>
             </div>
             <div class="right">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/IcQnxZ4d7qk" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://player.vimeo.com/video/51351649" width="550" height="323" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             </div>
         </div>
     </div>
@@ -157,27 +157,56 @@ layout: default
 
 <section class="blog" id="writing">
     <div class="section-content">
-        <h1>Writing</h1>
+        <h1 class="small-header">Writing</h1>
         <div class="border"></div>
         <div class="section-writing">
             <div class="blog-entry">
-                <div class="item-heading large-heading">3-Steps for Advancing Your 2015 Goals</div>
+                <div class="item-heading large-heading faux-underline-large">3-Steps for Advancing Your 2015 Goals</div>
                 <div class="item-subheading item-description">Now is the best time to reflect on this past year and evaluate what you have learned. Here are three steps to help you clarify the lessons you learned this year while laying the groundwork for advancing your 2015 goals. Carve out 40 minutes in your schedule where you will eliminate distractions. Find a quiet place with a notepad, pen and your 2014 calendar. This may be the best 40-minutes you spend this week! Phone off? Your favorite beverage in place? It’s time to begin.
                 </div>
             </div>
             <div class="blog-entry">
-                <div class="item-heading large-heading">3 Affirmations For Keeping Your Head In the Game</div>
+                <div class="item-heading large-heading faux-underline-large">3 Affirmations For Keeping Your Head In the Game</div>
                 <div class="item-subheading item-description">Now is the best time to reflect on this past year and evaluate what you have learned. Here are three steps to help you clarify the lessons you learned this year while laying the groundwork for advancing your 2015 goals. Carve out 40 minutes in your schedule where you will eliminate distractions. Find a quiet place with a notepad, pen and your 2014 calendar. This may be the best 40-minutes you spend this week! Phone off? Your favorite beverage in place? It’s time to begin.
                 </div>
             </div>
             <div class="blog-entry">
-                <div class="item-heading large-heading">How To Make The Most From A Mistake</div>
+                <div class="item-heading large-heading faux-underline-large ">How To Make The Most From A Mistake</div>
                 <div class="item-subheading item-description">Now is the best time to reflect on this past year and evaluate what you have learned. Here are three steps to help you clarify the lessons you learned this year while laying the groundwork for advancing your 2015 goals. Carve out 40 minutes in your schedule where you will eliminate distractions. Find a quiet place with a notepad, pen and your 2014 calendar. This may be the best 40-minutes you spend this week! Phone off? Your favorite beverage in place? It’s time to begin.
                 </div>
             </div>
         </div>
         <a class="button">Inquire about executive coaching</a>
         <div class="small-note">About one email a month</div>
+    </div>
+</section>
+
+<section class="books" id="books">
+    <div class="section-content">
+        <h1 class="small-header">Books</h1>
+        <div class="border"></div>
+        <div class="section-books">
+            <div class="book">
+                <img src="http://www.drbillmoore.com/store/product_images/x/303/green_single__37767_std.png">
+                <div class="item-heading">Playing Your Best When It Counts: Mental Skills for Musicians and Performing Artists.</div>
+                <div class="case-study-year item-supheading">$25</div>
+            </div>
+            <div class="book">
+                <img src="http://www.drbillmoore.com/store/product_images/j/369/Playing-Your-Best-Golf__52248_std.png">
+                <div class="item-heading">Playing Your Best When It Counts: Mental Skills for Musicians and Performing Artists.</div>
+                <div class="case-study-year item-supheading">$25</div>
+            </div>
+            <div class="book">
+                <img src="http://www.drbillmoore.com/store/product_images/v/692/PYB_Journal__80366_std.png">
+                <div class="item-heading">Playing Your Best When It Counts: High Performance Journal</div>
+                <div class="case-study-year item-supheading">$25</div>
+            </div>
+            <div class="book">
+                <img src="http://www.drbillmoore.com/store/product_images/x/303/green_single__37767_std.png">
+                <div class="item-heading">Playing Your Best When It Counts: High Performance Workbook</div>
+                <div class="case-study-year item-supheading">$25</div>
+            </div>
+        </div>
     </div>
 </section>
 
