--- a/index.html
+++ b/index.html
@@ -14,63 +14,123 @@ layout: default
         <h1>About</h1>
         <div class="border"></div>
         <p>
-            I am a performance psychology consultant working with
-            business professionals helping both individuals and groups
-            perform at optimal levels when it counts.
+            I am a performance psychology consultant working with business professionals helping both individuals and teams perform at optimal levels when it counts.
         </p>
         <h3>I help you become more&#8230;</h3>
         <div class="more-section-group">
             <div class="more-section">
                 <div class="font-heading fa fa-4x fa-heart"></div>
                 <div class="item-heading large-heading">Positive</div>
-        <div class="border"></div>
+                <div class="border"></div>
                 <div class="item-subheading large-subheading">
-                    Let me help you maximize the success of your organization by and accountability to help people get where their want to go and be who they want to be.
+                    <b>About who you are and what you are doing. </b>You already have most of what you need to be successful. The goal is to get out the very best you have inside you, when it matters most, and on a more consistent basis.
                 </div>
             </div>
             <div class="more-section">
                 <div class="font-heading fa fa-4x fa-institution"></div>
                 <div class="item-heading large-heading">Focused</div>
-                        <div class="border"></div>
-<div class="item-subheading large-subheading">
-                    Let me help you maximize the success of your organization by and accountability to help people get where their want to go and be who they want to be.
+                <div class="border"></div>
+                <div class="item-subheading large-subheading">
+                    <b>On the things that matter most in your success. </b>For many, it is not talent or work ethic keeping them from maximizing their full potential. Rather it is their ability to focus. Success is a product of identifying and executing around correct priorities.
                 </div>
             </div>
             <div class="more-section">
                 <div class="font-heading fa fa-4x fa-fighter-jet"></div>
                 <div class="item-heading large-heading">Fighting</div>
-                        <div class="border"></div>
-<div class="item-subheading large-subheading">
-                    Let me help you maximize the success of your organization by and accountability to help people get where their want to go and be who they want to be.
+                <div class="border"></div>
+                <div class="item-subheading large-subheading">
+                    <b>To overcome self-imposed obstacles. </b>Most of the fears, doubts and limiting beliefs we experience are one’s we create. Fully expressing your potential lies in your commitment to fight the good fight to overcome these self-imposed obstacles.
                 </div>
             </div>
         </div>
-        <h3>I believe in</h3>
+        <h3>Touchstones</h3>
         <p>
-            I believe in these values. I am a performance psychology consultant working with business professionals helping both individuals and groups perform
+            I believe maximizing your full potential can be achieved with passion and persistence. Every individual possesses the strengths enabling him or her to overcome obstacles and move beyond common performance into the realm of uncommon, passionate performance. The following are the standards you can expect from me.
         </p>
         <div class="about-section-group">
             <div class="about-section">
                 <div class="item-heading large-heading">Positive</div>
                 <div class="item-subheading large-subheading">
-                    Let me help you maximize the success of your organization by and accountability to help people get where their want to go and be who they want to be.
+                    I acknowledge the trust placed in me, and work to protect and honor that trust in all we do together. You can expect sincerity, honesty, forthrightness and a commitment to my values and principles.
                 </div>
             </div>
             <div class="about-section">
-                <div class="item-heading large-heading">Focused</div>
+                <div class="item-heading large-heading">Intentionality</div>
                 <div class="item-subheading large-subheading">
-                    Let me help you maximize the success of your organization by and accountability to help people get where their want to go and be who they want to be.
+                    I approach our work together with purpose, and while the process employed may be multifaceted, it is goal directed  - your goals, for your life and work.
                 </div>
             </div>
             <div class="about-section">
-                <div class="item-heading large-heading">Fighting</div>
+                <div class="item-heading large-heading">Accountability</div>
                 <div class="item-subheading large-subheading">
-                    Let me help you maximize the success of your organization by and accountability to help people get where their want to go and be who they want to be.
+                    I expect to be held accountable for the investment made by you or your company, and I will establish accountability structures with you to help generate movement toward your hopes, goals and dreams
                 </div>
             </div>
         </div>
     </div>
 </section>
+
+<div class="separate"></div>
+
+<section class="do" id="do">
+    <div class="section-content">
+        <h1>What I do</h1>
+        <div class="border"></div>
+        <div class="section-do">
+            <div class="left">
+                <div class="item-heading large-heading">Performance Coaching</div>
+                <div class="item-subheading item-description">
+                    Let me help you maximize your potential and the
+                    success of your organization by capitalizing on
+                    individual talents, executing solid processes that
+                    get results, implementing effective strategies for
+                    overcoming obstacles, and improving leadership
+                    skills that deliver results.
+                </div>
+            </div>
+            <div class="right">
+                <a class="button">Inquire about performance coaching</a>
+                <div class="small-note">I will honor confidentiality, availability and integrity</div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="purple-section">
+    <div class="section-content">
+        <div class="section-do third-size">
+            <div class="left">
+                <div class="item-heading large-heading">Corporate Speaking</div>
+                <div class="item-subheading item-description">
+                    I speak on topics related to human performance in the workplace. I customize my material to meet the specific needs of organizations in order to facilitate their desired outcomes.
+                </div>
+                <a class="button">Book Me</a>
+                <div class="small-note">About one email a month</div>
+            </div>
+            <div class="right">
+                <iframe src="https://player.vimeo.com/video/51351649" width="550" height="323" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="do">
+    <div class="section-content">
+        <div class="section-do">
+            <div class="left">
+                <div class="item-heading large-heading">High-Performance Seminars</div>
+                <div class="item-subheading item-description">
+                    I conduct seminar applying performance psychology principles to helping people perform at the upper range of your potential more consistently. Participants discuss, learn and apply strategies for changing self-limiting beliefs and attitudes while minimizing the mental and emotional interferences keeping them from performing their best when it matters most.
+                </div>
+            </div>
+            <div class="right">
+                <a class="button">Inquire about high-performance seminars</a>
+                <div class="small-note">I will honor confidentiality, availability and integrity</div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 <div class="separate"></div>
 <section class="more-info" id="work">
@@ -118,39 +178,6 @@ layout: default
             <div class="client"><a class="more-link faux-underline-large" href="http://www.webbyawards.com/">North Western Mutual Financial Group</a></div>
             <div class="client"><a class="more-link faux-underline-large" href="https://www.youtube.com/user/pbsdigitalstudios">Dell-Webb</a></div>
             <div class="client"><a class="more-link faux-underline-large" href="http://www.webbyawards.com/">Octagon</a></div>
-        </div>
-    </div>
-</section>
-
-<section class="do" id="do">
-    <div class="section-content">
-        <h1>What I do</h1>
-        <div class="border"></div>
-        <div class="section-do">
-            <div class="left">
-                <div class="item-heading large-heading">Executive Coaching</div>
-                <div class="item-subheading item-description">Let me help you maximize the success of your organization by capitalizing on the individual talents on your team, creating right processes for desired results, achieving by-in to new initiatives and improving leadership skills that deliver results.</div>
-            </div>
-            <div class="right">
-                <a class="button">Inquire about executive coaching</a>
-                <div class="small-note">I will honor confidentiality, availability and integrity</div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="purple-section">
-    <div class="section-content">
-        <div class="section-do third-size">
-            <div class="left">
-                <div class="item-heading large-heading">Corporate Speaking</div>
-                <div class="item-subheading item-description">I speak on topics related to human performance in the workplace. I customize my material to meet the specific needs of organizations to facilitate their desired outcomes.</div>
-                <a class="button">Book Me</a>
-                <div class="small-note">About one email a month</div>
-            </div>
-            <div class="right">
-                <iframe src="https://player.vimeo.com/video/51351649" width="550" height="323" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            </div>
         </div>
     </div>
 </section>
