--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ layout: default
         <div class="border"></div>
         <div class="case-studies">
             <div class="case-study">
-                <div class="case-study-image" style="background-image: url('img')" ></div>
+                <div class="case-study-image" style="background-image: url('/assets/images/speaking-1.jpg')" ></div>
                 <div class="case-study-name item-heading large-heading">Nokia</div>
                 <div class="case-study-year item-supheading">2010-2015</div>
                 <div class="case-study-description item-subheading">
@@ -147,7 +147,7 @@ layout: default
                 </div>
             </div>
             <div class="case-study">
-                <div class="case-study-image" style="background-image: url('img')" ></div>
+                <div class="case-study-image" style="background-image: url('/assets/images/speaking-3.jpg')" ></div>
                 <div class="case-study-name item-heading large-heading">Lifetime Financial</div>
                 <div class="case-study-year item-supheading">2014-2015</div>
                 <div class="case-study-description item-subheading">
@@ -155,7 +155,7 @@ layout: default
                 </div>
             </div>
             <div class="case-study">
-                <div class="case-study-image" style="background-image: url('img')" ></div>
+                <div class="case-study-image" style="background-image: url('/assets/images/speaking-2.jpg')" ></div>
                 <div class="case-study-name item-heading large-heading">Vanderbilt</div>
                 <div class="case-study-year item-supheading">2013-2015</div>
                 <div class="case-study-description item-subheading">
@@ -166,18 +166,18 @@ layout: default
         <div class="border"></div>
         <h3>Client List</h3>
         <div class="client-section">
-            <div class="client"><a class="more-link faux-underline-large" href="http://americanpublicmedia.publicradio.org/">Professional Golf Association (PGA)</a></div>
-            <div class="client"><a class="more-link faux-underline-large" href="http://asroma.it">Women’s Tennis Association (WTA)</a></div>
-            <div class="client"><a class="more-link faux-underline-large" href="http://bbcamerica.com">United States Tennis Association (USTA)</a></div>
-            <div class="client"><a class="more-link faux-underline-large" href="http://bbcamerica.com">United States Track and Field (USOC)</a></div>
-            <div class="client"><a class="more-link faux-underline-large" href="http://bbcworldwide.com">Clemson University</a></div>
-            <div class="client"><a class="more-link faux-underline-large" href="http://www.bbc.com/news/world/">University of Kentucky</a></div>
-            <div class="client"><a class="more-link faux-underline-large" href="http://frederator.com/">University of Oklahoma</a></div>
-            <div class="client"><a class="more-link faux-underline-large" href="http://www.creativelab5.com/">University of Texas</a></div>
-            <div class="client"><a class="more-link faux-underline-large" href="https://www.youtube.com/user/pbsdigitalstudios">Nokia</a></div>
-            <div class="client"><a class="more-link faux-underline-large" href="http://www.webbyawards.com/">North Western Mutual Financial Group</a></div>
-            <div class="client"><a class="more-link faux-underline-large" href="https://www.youtube.com/user/pbsdigitalstudios">Dell-Webb</a></div>
-            <div class="client"><a class="more-link faux-underline-large" href="http://www.webbyawards.com/">Octagon</a></div>
+            <div class="client"><a class="more-link faux-underline-large" href="http://pga.com">Professional Golf Association (PGA)</a></div>
+            <div class="client"><a class="more-link faux-underline-large" href="http://wtatennis.com">Women’s Tennis Association (WTA)</a></div>
+            <div class="client"><a class="more-link faux-underline-large" href="http://usta.com">United States Tennis Association (USTA)</a></div>
+            <div class="client"><a class="more-link faux-underline-large" href="http://teamusa.org">United States Track and Field (USOC)</a></div>
+            <div class="client"><a class="more-link faux-underline-large" href="http://clemson.edu">Clemson University</a></div>
+            <div class="client"><a class="more-link faux-underline-large" href="http://uky.edu">University of Kentucky</a></div>
+            <div class="client"><a class="more-link faux-underline-large" href="http://ou.edu">University of Oklahoma</a></div>
+            <div class="client"><a class="more-link faux-underline-large" href="http://www.utexas.edu">University of Texas</a></div>
+            <div class="client"><a class="more-link faux-underline-large" href="http://company.nokia.com">Nokia</a></div>
+            <div class="client"><a class="more-link faux-underline-large" href="https://www.northwesternmutual.com">North Western Mutual Financial Group</a></div>
+            <div class="client"><a class="more-link faux-underline-large" href="http://www.delwebb.com">Dell-Webb</a></div>
+            <div class="client"><a class="more-link faux-underline-large" href="http://www.octagon.com">Octagon</a></div>
         </div>
     </div>
 </section>
