--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ layout: default
 
 <section class="do">
     <div class="section-content">
-        <div class="section-do">
+        <div class="section-do last">
             <div class="left">
                 <div class="item-heading large-heading">High-Performance Seminars</div>
                 <div class="item-subheading item-description">
@@ -203,7 +203,7 @@ layout: default
                 </div>
             </div>
         </div>
-        <a class="button">Inquire about executive coaching</a>
+        <a class="button" href="https://www.linkedin.com/in/drbillmoore">Subscribe</a>
         <div class="small-note">About one email a month</div>
     </div>
 </section>
@@ -247,7 +247,7 @@ layout: default
     </p>
     <p>Currently living in Oklahoma with my wife Nicki and son Ian.</p>
     <div class="border"></div>
-    <h1>Be more positive, focused and fighting</h1>
+    <h1 class="small-width">Be more positive, focused and fighting</h1>
     <a class="button">Inquire about executive coaching</a>
     </div>
 </section>
