hopefully improve fonts

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
         <p>
             I am a performance psychology consultant working with business professionals helping both individuals and teams perform at optimal levels when it counts.
         </p>
-        <h3>I help you become more&#8230;</h3>
+        <h3 class="small">I help you become more&#8230;</h3>
         <div class="more-section-group">
             <div class="more-section">
                 <div class="font-heading fa fa-4x fa-heart"></div>
@@ -49,19 +49,25 @@ layout: default
         </p>
         <div class="about-section-group">
             <div class="about-section">
-                <div class="item-heading large-heading">Positive</div>
+                <div class="item-heading large-heading">
+                    <div class="faux-underline-large">Positive</div>
+                </div>
                 <div class="item-subheading large-subheading">
                     I acknowledge the trust placed in me, and work to protect and honor that trust in all we do together. You can expect sincerity, honesty, forthrightness and a commitment to my values and principles.
                 </div>
             </div>
             <div class="about-section">
-                <div class="item-heading large-heading">Intentionality</div>
+                <div class="item-heading large-heading">
+                    <div class="faux-underline-large">Intentionality</div>
+                </div>
                 <div class="item-subheading large-subheading">
                     I approach our work together with purpose, and while the process employed may be multifaceted, it is goal directed  - your goals, for your life and work.
                 </div>
             </div>
             <div class="about-section">
-                <div class="item-heading large-heading">Accountability</div>
+                <div class="item-heading large-heading">
+                    <div class="faux-underline-large">Accountability</div>
+                </div>
                 <div class="item-subheading large-subheading">
                     I expect to be held accountable for the investment made by you or your company, and I will establish accountability structures with you to help generate movement toward your hopes, goals and dreams
                 </div>
