allow fonts to work on aws hosting

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ layout: default
         <div class="about-section-group">
             <div class="about-section">
                 <div class="item-heading large-heading">
-                    <div class="faux-underline-large">Positive</div>
+                    <div class="faux-underline-large">Positivity</div>
                 </div>
                 <div class="item-subheading large-subheading">
                     I acknowledge the trust placed in me, and work to protect and honor that trust in all we do together. You can expect sincerity, honesty, forthrightness and a commitment to my values and principles.
