--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ layout: default
                     <div class="faux-underline-large">Accountability</div>
                 </div>
                 <div class="item-subheading large-subheading">
-                    I expect to be held accountable for the investment made by you or your company, and I will establish accountability structures with you to help generate movement toward your hopes, goals and dreams
+                    I expect to be held accountable for the investment made by you or your company, and I will establish accountability structures with you to help generate movement toward your hopes, goals and dreams.
                 </div>
             </div>
         </div>
